fix: fix :active on ios

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,6 +7,7 @@
 }
 
 html, body {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-font-smoothing: antialiased;
   background: var(--contrast);
   color: var(--primary);
@@ -42,7 +43,6 @@ li {
 
 input, button, select {
   -webkit-appearance: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background: transparent;
   border: none;
   border-radius: 0;
@@ -62,7 +62,6 @@ input::-webkit-inner-spin-button {
 }
 
 a, button, [role=button], [role=option] {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   cursor: pointer;
   user-select: none;
   border-radius: .25rem;
@@ -90,15 +89,13 @@ app-svg-icon {
 // styled inputs
 input, button, select {
   &.default {
-    background-color: var(--contrast100);
+    background: var(--contrast100);
     border-radius: .25rem;
-    border: 1px solid var(--contrast100);
-    line-height: 1.25;
     padding: .75rem 1rem;
+    line-height: 1.25;
 
-    &:focus {
-      background-color: var(--contrast);
-      border-color: var(--contrast800);
+    &:active {
+      background: var(--contrast);
     }
   }
 }
